# KappaModules

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg
.github/scripts/: publish_to.py  update_version.py
.github/workflows/: publish.yaml
TODO/: batchnorm1d_vit.py  native_flash_attention.py  split_batchnorm.py
debugscripts/: async_batchnorm.py  continuous_pos_embed.py  datanorm.py  interpolate_posembed.py
kappamodules/: __init__.py  drop_path.py  identity.py  native_flash_attention.py  residual.py  weight_norm_linear.py
kappamodules/attention/: __init__.py  dot_product_attention.py  dot_product_attention_slow.py  efficient_attention.py  linear_attention.py  linformer_attention.py  localgrid_attention.py  mmdit_dot_product_attention.py  mmmdit_dot_product_attention.py  perceiver_attention.py  perceiver_attention_localgrid.py  transsolver_attention.py  window_attention.py
kappamodules/cnn/: convnext.py  convnext_block.py
kappamodules/convolution/: __init__.py  convnext.py
kappamodules/diffaug/: gaussian_blur.py
kappamodules/functional/: attention.py  logscale.py  patchify.py  pos_embed.py
kappamodules/init/: functional.py
kappamodules/layers/: __init__.py  async_batchnorm.py  continuous_pos_embed.py  continuous_sincos_embed.py  datanorm.py  drop_path.py  identity.py  layer_scale.py  (+11 more)
original_modules/: drop_path.py  mae_pos_embed.py  original_dit_block.py  original_drop_path.py  original_perceiver_attention.py  original_window_attention.py
test_unit/: test_drop_path.py  test_residual.py  test_weight_norm_linear.py
(+98 files in other folders)
