[metadata]
# version is set by CI/CD pipeline
name = kappamodules
description = efficient building blocks for pytorch models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenediktAlkin/KappaModules
project_urls =
    Source Code = https://github.com/BenediktAlkin/KappaModules
    Bug Tracker = https://github.com/BenediktAlkin/KappaModules/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch
    einops
    numpy


[options.packages.find]
exclude =
    original_modules*
    tests_unit*
